feat(frontend): add invalid checkbox, add finalized state

--- a/packages/frontend/src/page/i18n/en.json
+++ b/packages/frontend/src/page/i18n/en.json
@@ -6,13 +6,16 @@
     "label.question.notOpen": "This question is not yet open for answers.",
     "label.question.openingIn": "Opening in",
     "label.question.form.answer": "Answer:",
+    "label.question.form.answer.select": "Pick an answer",
     "label.question.form.bond": "Bond:",
+    "label.question.form.invalid": "Invalid",
     "label.question.form.confirm": "Confirm",
     "label.answer.missing": "No answer submitted yet",
     "label.answer.answer": "Current answer: {{answer}} ($ {{bond}} {{symbol}} bonded)",
     "label.answer.yes": "YES",
     "label.answer.no": "NO",
     "label.answer.bonded": "bonded",
+    "label.answer.finalized": "Finalized",
     "label.answer.invalid": "Goal currently market as invalid with $ {{bond}} {{symbol}} bonded",
     "label.here": "here",
     "label.reward": "Reward: {{reward}}"
