--- a/packages/frontend/src/page/i18n/en.json
+++ b/packages/frontend/src/page/i18n/en.json
@@ -1,3 +1,25 @@
 {
-    "main": "Page for example oracle template"
+    "label.arbitration.peding.1": "The KPI-related condition is currently awaiting a final answer from",
+    "label.arbitration.peding.2": "after an arbitration request has been submitted by a user.",
+    "label.question.info": "In case an answer cannot be determined/calculated due to how the condition was originally framed or due to missing details, you can also mark the KPI token as invalid altogether.",
+    "label.question.realityReference": "Reality.eth is used as a crowdsourced oracle. You can check out how Reality.eth works by clicking",
+    "label.question.notOpen": "This question is not yet open for answers.",
+    "label.question.openingIn": "Opening in",
+    "label.question.form.answer": "Answer:",
+    "label.question.form.answer.select": "Pick an answer",
+    "label.question.form.bond": "Bond:",
+    "label.question.form.invalid": "Invalid",
+    "label.question.form.tooSoon": "Answered too soon",
+    "label.question.form.confirm": "Confirm",
+    "label.question.form.reopen": "Reopen",
+    "label.answer.missing": "No answer submitted yet",
+    "label.answer.answer": "Current answer: {{answer}} ($ {{bond}} {{symbol}} bonded)",
+    "label.answer.yes": "YES",
+    "label.answer.no": "NO",
+    "label.answer.bonded": "bonded",
+    "label.answer.finalized": "Finalized",
+    "label.answer.invalid": "Goal currently market as invalid with $ {{bond}} {{symbol}} bonded",
+    "label.answer.tooSoon": "Goal currently market as answered too soon with $ {{bond}} {{symbol}} bonded",
+    "label.here": "here",
+    "label.reward": "Reward: {{reward}}"
 }
