feat(frontend): use radio buttons for boolean answer

--- a/packages/frontend/src/page/i18n/en.json
+++ b/packages/frontend/src/page/i18n/en.json
@@ -11,9 +11,9 @@
     "label.question.timeout": "Timeout",
     "label.question.oracleLink": "Oracle link",
     "label.question.subtitle": "Do you know the answer to this question?",
-    "label.question.form.answer": "Answer:",
+    "label.question.form.answer": "Answer",
     "label.question.form.answer.select": "Pick an answer",
-    "label.question.form.bond": "Bond:",
+    "label.question.form.bond": "Bond",
     "label.question.form.invalid": "Invalid",
     "label.question.form.tooSoon": "Answered too soon",
     "label.question.form.confirm": "Confirm my answer",
