--- a/packages/frontend/src/page/i18n/en.json
+++ b/packages/frontend/src/page/i18n/en.json
@@ -11,20 +11,21 @@
     "label.question.timeout": "Timeout",
     "label.question.oracleLink": "Oracle link",
     "label.question.subtitle": "Do you know the answer to this question?",
-    "label.question.form.answer": "Answer",
-    "label.question.form.answer.select": "Pick an answer",
     "label.question.form.bond": "Bond",
     "label.question.form.invalid": "Invalid",
     "label.question.form.tooSoon": "Answered too soon",
     "label.question.form.confirm": "Confirm my answer",
     "label.question.form.reopen": "Reopen",
     "label.answer.missing": "No answer submitted yet",
-    "label.answer.answer": "Current answer: {{answer}} ($ {{bond}} {{symbol}} bonded)",
+    "label.answer.answer": "Current answer: {{answer}}",
     "label.answer.yes": "YES",
     "label.answer.no": "NO",
     "label.answer.bonded": "bonded",
-    "label.answer.finalized": "Finalized",
-    "label.answer.invalid": "Goal currently market as invalid with $ {{bond}} {{symbol}} bonded",
+    "label.answer.finalized": "Question is finalized",
+    "label.answer.final.answer": "Final Answer",
+    "label.answer.marked.as": "This question has been marked as \"{{outcome}}\".",
+    "label.answer.ask.reopen": "Do you want to reopen the question?",
     "label.answer.tooSoon": "Goal currently market as answered too soon with $ {{bond}} {{symbol}} bonded",
+    "label.answer.learnMore": " To learn more about the results you can visit the oracle.",
     "label.reward": "Reward: {{reward}}"
 }
