--- a/packages/frontend/src/page/i18n/en.json
+++ b/packages/frontend/src/page/i18n/en.json
@@ -12,15 +12,19 @@
     "label.question.oracleLink": "Oracle link",
     "label.question.subtitle": "Do you know the answer to this question?",
     "label.question.form.bond": "Bond",
-    "label.question.form.invalid": "Invalid",
+    "label.question.form.yes": "Yes",
+    "label.question.form.no": "No",
+    "label.question.form.invalid": "Invalid Question",
     "label.question.form.tooSoon": "Answered too soon",
     "label.question.form.confirm": "Confirm my answer",
     "label.question.form.reopen": "Reopen",
     "label.answer.missing": "No answer submitted yet",
     "label.answer.answer": "Current answer: {{answer}}",
-    "label.answer.yes": "YES",
-    "label.answer.no": "NO",
-    "label.answer.bonded": "bonded",
+    "label.answer.form.yes": "Yes",
+    "label.answer.form.no": "No",
+    "label.answer.form.invalid": "Invalid",
+    "label.answer.form.tooSoon": "Answered too soon",
+    "label.answer.form.bonded": "bonded",
     "label.answer.finalized": "Question is finalized",
     "label.answer.final.answer": "Final Answer",
     "label.answer.marked.as": "This question has been marked as \"{{outcome}}\".",
