Refactor reality form (#9)
* feat(frontend): make question info responsive

* feat(frontend): use radio buttons for boolean answer

* refactor(frontend): refactor answer component

* refactor(frontend): move loading inside answer form

* feat(frontend): minor timer fix, show loader if question is not defined

* refactor(frontend): make answer utils name more clear

* refactor(frontend): use duration format for timer, fix typo

* feat(frontend): use new RadioGroup component

* feat(frontend): add error label to bond input

* fix(frontend): disable submit button after answering

* feat(frontend): update libs

* refactor(frontend): remove console.log

--- a/packages/frontend/src/page/i18n/en.json
+++ b/packages/frontend/src/page/i18n/en.json
@@ -11,20 +11,27 @@
     "label.question.timeout": "Timeout",
     "label.question.oracleLink": "Oracle link",
     "label.question.subtitle": "Do you know the answer to this question?",
-    "label.question.form.answer": "Answer:",
-    "label.question.form.answer.select": "Pick an answer",
-    "label.question.form.bond": "Bond:",
-    "label.question.form.invalid": "Invalid",
+    "label.question.form.bond": "Bond",
+    "label.question.form.yes": "Yes",
+    "label.question.form.no": "No",
+    "label.question.form.invalid": "Invalid Question",
     "label.question.form.tooSoon": "Answered too soon",
     "label.question.form.confirm": "Confirm my answer",
     "label.question.form.reopen": "Reopen",
     "label.answer.missing": "No answer submitted yet",
-    "label.answer.answer": "Current answer: {{answer}} ($ {{bond}} {{symbol}} bonded)",
-    "label.answer.yes": "YES",
-    "label.answer.no": "NO",
-    "label.answer.bonded": "bonded",
-    "label.answer.finalized": "Finalized",
-    "label.answer.invalid": "Goal currently market as invalid with $ {{bond}} {{symbol}} bonded",
+    "label.answer.answer": "Current answer: {{answer}}",
+    "label.answer.form.yes": "Yes",
+    "label.answer.form.no": "No",
+    "label.answer.form.invalid": "Invalid",
+    "label.answer.form.tooSoon": "Answered too soon",
+    "label.answer.form.bonded": "bonded",
+    "label.answer.finalized": "Question is finalized",
+    "label.answer.final.answer": "Final Answer",
+    "label.answer.marked.as": "This question has been marked as \"{{outcome}}\".",
+    "label.answer.ask.reopen": "Do you want to reopen the question?",
     "label.answer.tooSoon": "Goal currently market as answered too soon with $ {{bond}} {{symbol}} bonded",
-    "label.reward": "Reward: {{reward}}"
+    "label.answer.learnMore": " To learn more about the results you can visit the oracle.",
+    "label.reward": "Reward: {{reward}}",
+    "error.bond.empty": "Bond is required",
+    "error.bond.insufficient": "Bond needs to be at least {{minBond}}"
 }
