feat(frontend): improve current answer component

--- a/packages/frontend/src/page/i18n/en.json
+++ b/packages/frontend/src/page/i18n/en.json
@@ -18,11 +18,12 @@
     "label.question.form.tooSoon": "Answered too soon",
     "label.question.form.confirm": "Confirm my answer",
     "label.question.form.reopen": "Reopen",
-    "label.answer.missing": "No answer submitted yet",
     "label.answer.answer": "Current answer: {{answer}}",
+    "label.answer.current": "Current answer",
+    "label.answer.form.missing": "No answer submitted yet",
     "label.answer.form.yes": "Yes",
     "label.answer.form.no": "No",
-    "label.answer.form.invalid": "Invalid",
+    "label.answer.form.invalid": "Invalid Question",
     "label.answer.form.tooSoon": "Answered too soon",
     "label.answer.form.bonded": "bonded",
     "label.answer.finalized": "Question is finalized",
@@ -30,7 +31,7 @@
     "label.answer.marked.as": "This question has been marked as \"{{outcome}}\".",
     "label.answer.ask.reopen": "Do you want to reopen the question?",
     "label.answer.tooSoon": "Goal currently market as answered too soon with $ {{bond}} {{symbol}} bonded",
-    "label.answer.learnMore": " To learn more about the results you can visit the oracle.",
+    "label.answer.learnMore": "To learn more about the results you can visit the oracle.",
     "label.reward": "Reward: {{reward}}",
     "error.bond.empty": "Bond is required",
     "error.bond.insufficient": "Bond needs to be at least {{minBond}}"
