feat(frontend): add the possibility to request the arbitration

--- a/packages/frontend/src/page/i18n/en.json
+++ b/packages/frontend/src/page/i18n/en.json
@@ -1,6 +1,4 @@
 {
-    "label.arbitration.peding.1": "The KPI-related condition is currently awaiting a final answer from",
-    "label.arbitration.peding.2": "after an arbitration request has been submitted by a user.",
     "label.question.timeLeft": "Time left:",
     "label.question.time.days": "Days",
     "label.question.time.hours": "Hours",
@@ -17,6 +15,7 @@
     "label.question.form.invalid": "Invalid Question",
     "label.question.form.tooSoon": "Answered too soon",
     "label.question.form.confirm": "Confirm my answer",
+    "label.question.form.requestArbitration": "Request arbitration",
     "label.question.form.reopen": "Reopen",
     "label.question.form.finalize": "Finalize oracle",
     "label.answer.current": "Current answer",
@@ -26,6 +25,9 @@
     "label.answer.form.invalid": "Invalid Question",
     "label.answer.form.tooSoon": "Answered too soon",
     "label.answer.form.bonded": "Bonded amount",
+    "label.answer.pendingArbitration": "Question is pending arbitration",
+    "label.answer.pendingArbitration.description.1": "This question is pending arbitration.",
+    "label.answer.pendingArbitration.description.2": "Please wait for the arbitrator to give the answer.",
     "label.answer.finalized": "Question is finalized",
     "label.answer.final.answer": "Final Answer",
     "label.answer.marked.as": "This question has been marked as \"{{outcome}}\".",
