feat(frontend): upgrade dependencies and implement duration select

--- a/packages/frontend/src/creation-form/i18n/en.json
+++ b/packages/frontend/src/creation-form/i18n/en.json
@@ -2,7 +2,20 @@
     "label.arbitrator": "Arbitrator:",
     "label.reality.template": "Result type:",
     "label.question": "Question:",
-    "label.question.timeout": "Question timeout (seconds):",
+    "label.question.timeout": "Question timeout:",
+    "option.question.timeout.1": "30 seconds",
+    "option.question.timeout.2": "3 minutes",
+    "option.question.timeout.3": "15 minutes",
+    "option.question.timeout.4": "1 hour",
+    "option.question.timeout.5": "3 hours",
+    "option.question.timeout.6": "12 hours",
+    "option.question.timeout.7": "1 day",
+    "option.question.timeout.8": "2 days",
+    "option.question.timeout.9": "3 days",
+    "option.question.timeout.10": "4 days",
+    "option.question.timeout.11": "5 days",
+    "option.question.timeout.12": "6 days",
+    "option.question.timeout.13": "1 week",
     "label.opening.timestamp": "Opening timestamp:",
     "label.minimum.bond": "Minimum bond:",
     "placeholder.pick": "Pick an option:",
