feat(frontend): implement claim winnings (#24)
* feat(frontend): implement fetch answers fetcher function

* feat(frontend): implement claim winnings and withdraw buttons

* refactor(contract): remove test tokens minting

* feat(frontend): make answers history fetch watch for blocks

* feat(frontend): disable claim winnings button when history hash is zero

* fix(frontend): enable withdraw when there are funds

* fix(contract): remove erc20 token addresses from globals

* fix(frontend): remove extra loading state for buttons

* fix(frontend): remove extra history hash fetch, small typo

---------

Co-authored-by: Paolo Guerra <pg.paologuerra@gmail.com>

--- a/packages/frontend/src/page/i18n/en.json
+++ b/packages/frontend/src/page/i18n/en.json
@@ -18,6 +18,8 @@
     "label.question.form.requestArbitration": "Request arbitration",
     "label.question.form.reopen": "Reopen",
     "label.question.form.finalize": "Finalize oracle",
+    "label.question.form.claimWinnings": "Claim winnings",
+    "label.question.form.withdraw": "Withdraw winnings",
     "label.answer.current": "Current answer",
     "label.answer.form.missing": "No answer submitted yet",
     "label.answer.form.yes": "Yes",
@@ -45,5 +47,7 @@
     "label.transaction.answerSubmitted": "Answered with {{bond}} {{symbol}} bonded",
     "label.transaction.reopenSubmitted": "Reopened question",
     "label.transaction.oracleFinalized": "Finalized oracle",
-    "label.transaction.arbitrationRequested": "Arbitration requested"
+    "label.transaction.arbitrationRequested": "Arbitration requested",
+    "label.transaction.winningsClaimed": "Claimed winnings",
+    "label.transaction.winningsWithdrawn": "Withdrawn winnings"
 }
