fix(frontend): add insufficient native currency balance error in bond input

--- a/packages/frontend/src/page/i18n/en.json
+++ b/packages/frontend/src/page/i18n/en.json
@@ -38,7 +38,8 @@
     "label.answer.learnMore": "To learn more about the results you can visit the oracle.",
     "label.reward": "Reward: {{reward}}",
     "error.bond.empty": "Bond is required",
-    "error.bond.insufficient": "Bond needs to be at least {{minBond}}",
+    "error.bond.insufficient": "Bond needs to be at least {{minBond}} {{symbol}}",
+    "error.bond.notEnoughBalanceInWallet": "Not enough {{symbol}} balance in wallet",
     "bond.info.1": "This is money that you will get back if your answer is accepted as the final answer, and lose if your answer is not accepted.",
     "bond.info.2": "Posting a bond stakes a claim to the answer you are giving; if someone else later reposts the same answer, you will get your bond back, and also be paid, as a minimum, an amount equal to the bond you have posted.",
     "bond.info.3": "Correcting an answer will entitle you to the bond of the previous user. However, you must submit your own bond, and it must be at least twice as high as the bond submitted by the previous answerer. If you are resubmitting an answer that someone has already given, part of that payment will be deducted and paid to them.",
