feat(frontend): update creation form minimum bond error message to specify that the value can be 0

--- a/packages/frontend/src/creation-form/i18n/en.json
+++ b/packages/frontend/src/creation-form/i18n/en.json
@@ -23,5 +23,5 @@
     "confirm": "Confirm",
     "error.question.empty": "A question is required",
     "error.question.timeout.empty": "The minimum question timeout is {{minimum}} seconds",
-    "error.minimum.bond.empty": "A minimum bond is required"
+    "error.minimum.bond.empty": "A minimum bond is required (it can be 0)"
 }
