feat(frotnend): generic imrprovements in page component

--- a/packages/frontend/src/page/i18n/en.json
+++ b/packages/frontend/src/page/i18n/en.json
@@ -1,30 +1,35 @@
 {
-    "label.question.timeLeft": "Time left:",
+    "label.question.timeLeft": "The question will open up for answers in:",
     "label.question.time.days": "Days",
     "label.question.time.hours": "Hours",
     "label.question.time.minutes": "Minutes",
     "label.question.time.seconds": "Seconds",
     "label.question.arbitrator": "Arbitrator",
+    "label.question.question": "Question",
     "label.question.rewards": "Rewards",
     "label.question.timeout": "Timeout",
-    "label.question.oracleLink": "Oracle link",
-    "label.question.subtitle": "Do you know the answer to this question?",
-    "label.question.form.bond": "Bond",
+    "label.question.oracleLink": "Direct oracle link",
+    "label.question.subtitle.1": "If you know the answer you can submit it using the form below. You can learn how Reality.eth works by having a look at the ",
+    "label.question.subtitle.2": "official docs",
+    "label.question.arbitrating.subtitle": "The question is currently undergoing arbitration and will be finalized once the arbitrator submits an answer.",
+    "label.question.form.bond": "Bond ({{symbol}})",
     "label.question.form.yes": "Yes",
     "label.question.form.no": "No",
     "label.question.form.invalid": "Invalid Question",
     "label.question.form.tooSoon": "Answered too soon",
-    "label.question.form.confirm": "Confirm my answer",
+    "label.question.form.confirm": "Confirm",
     "label.question.form.requestArbitration": "Request arbitration",
     "label.question.form.reopen": "Reopen",
     "label.question.form.finalize": "Finalize oracle",
     "label.question.form.claimWinnings": "Claim winnings",
     "label.question.form.withdraw": "Withdraw winnings",
     "label.answer.current": "Current answer",
+    "label.answer.final": "Final answer",
+    "label.answer.arbitrating": "Awaiting arbitration",
     "label.answer.form.missing": "No answer submitted yet",
     "label.answer.form.yes": "Yes",
     "label.answer.form.no": "No",
-    "label.answer.form.invalid": "Invalid Question",
+    "label.answer.form.invalid": "Marked as invalid",
     "label.answer.form.tooSoon": "Answered too soon",
     "label.answer.form.bonded": "Bonded amount",
     "label.answer.pendingArbitration": "Question is pending arbitration",
