Claim and withdraw (#29)
* feat(frontend): claim and withdraw funds in one step

* fix(frontend): fix double <p> element error

* refactor(frontend): adapt i18n texts

* fix(frontend): minor UI tweaks

* fix(frontend): change claim button text

--- a/packages/frontend/src/page/i18n/en.json
+++ b/packages/frontend/src/page/i18n/en.json
@@ -21,8 +21,7 @@
     "label.question.form.requestArbitration": "Request arbitration",
     "label.question.form.reopen": "Reopen",
     "label.question.form.finalize": "Finalize oracle",
-    "label.question.form.claimWinnings": "Claim winnings",
-    "label.question.form.withdraw": "Withdraw winnings",
+    "label.question.form.withdrawWinnings": "Withdraw winnings",
     "label.answer.current": "Current answer",
     "label.answer.final": "Final answer",
     "label.answer.arbitrating": "Awaiting arbitration",
@@ -54,6 +53,5 @@
     "label.transaction.reopenSubmitted": "Reopened question",
     "label.transaction.oracleFinalized": "Finalized oracle",
     "label.transaction.arbitrationRequested": "Arbitration requested",
-    "label.transaction.winningsClaimed": "Claimed winnings",
     "label.transaction.winningsWithdrawn": "Withdrawn winnings"
 }
