fix(frontend): add question fee to reopen call, check wallet connection

--- a/packages/frontend/src/page/i18n/en.json
+++ b/packages/frontend/src/page/i18n/en.json
@@ -27,6 +27,7 @@
     "label.answer.current": "Current answer",
     "label.answer.final": "Final answer",
     "label.answer.arbitrating": "Awaiting arbitration",
+    "label.answer.form.noWallet": "No wallet connected",
     "label.answer.form.missing": "No answer submitted yet",
     "label.answer.form.yes": "Yes",
     "label.answer.form.no": "No",
