feat(frontend): enable withdraw only for answerers, dedicated withdraw when there's balance

--- a/packages/frontend/src/page/i18n/en.json
+++ b/packages/frontend/src/page/i18n/en.json
@@ -23,6 +23,7 @@
     "label.question.form.requestArbitration": "Request arbitration",
     "label.question.form.reopen": "Reopen",
     "label.question.form.finalize": "Finalize oracle",
+    "label.question.form.claimAndwithdrawWinnings": "Claim and withdraw winnings",
     "label.question.form.withdrawWinnings": "Withdraw winnings",
     "label.answer.current": "Current answer",
     "label.answer.final": "Final answer",
