feat(frontend): add new minimum question timeout and new minimum answer periods checks

--- a/packages/frontend/src/creation-form/i18n/en.json
+++ b/packages/frontend/src/creation-form/i18n/en.json
@@ -31,7 +31,7 @@
     "confirm": "Confirm",
     "error.question.empty": "A question is required",
     "error.question.timeout.empty": "The minimum question timeout is {{minimum}} seconds",
-    "error.opening.timestamp.tooSoon": "At least {{periodsAmount}} full answer windows should be available between the opening timestamp and the KPI token expiration.",
+    "error.opening.timestamp.tooSoon": "At least {{periodsAmount}} full answer windows must be available between the opening timestamp and the KPI token expiration.",
     "error.minimum.bond.empty": "A minimum bond is required (it can be 0)",
     "warning.arbitrator.fees": "The picked arbitrator charges some fees for the service:",
     "warning.arbitrator.fees.question": "Question fee",
