--- a/packages/frontend/src/creation-form/i18n/en.json
+++ b/packages/frontend/src/creation-form/i18n/en.json
@@ -33,6 +33,7 @@
     "error.question.timeout.empty": "The minimum question timeout is {{minimum}} seconds",
     "error.opening.timestamp.tooSoon": "At least {{periodsAmount}} full answer windows must be available between the opening timestamp and the KPI token expiration.",
     "error.minimum.bond.empty": "A minimum bond is required (it can be 0)",
+    "warning.arbitrator.title": "Important",
     "warning.arbitrator.fees": "The picked arbitrator charges some fees for the service:",
     "warning.arbitrator.fees.question": "Question fee",
     "warning.arbitrator.fees.dispute": "Dispute fee"
